# Ropendal

./: .Rbuildignore  .gitignore  AGENTS.md  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  configure  configure.win
.github/workflows/: pkgdown.yml  r-package.yml  webr.yml
R/: 000-wrappers.R  api.R  store.R
benchmarks/: gdrive-minio-read-stress.R  minio-paws.Rmd  minio-paws.md
design/: STATUS.md  api-design.md  batch-conformance-review.md  opinionated-abstract-filesystem-access.md  refinement-log.md  testing-plan.md
inst/include/: ropendal.h
inst/tinytest/: helper-ropendal.R  test-00-package-contract.R  test-10-local-fs.R  test-15-byte-store.R  test-16-store-cache.R  test-17-byte-substrate-demos.R  test-20-credentials.R  test-60-service-gdrive.R  test-60-service-http-fixture.R  test-60-service-s3-minio.R  test-60-service-s3-public.R  test-90-ci-native-api-contract.R
man/: OpendalAio.Rd  OpendalCredentialProvider.Rd  OpendalFs.Rd  OpendalHttpFixture.Rd  OpendalLsIter.Rd  OpendalReadIter.Rd  OpendalWriteIter.Rd  Ropendal-api.Rd  byte-store.Rd
src/: Makevars.in  Makevars.win.in  capi_anchor.c  init.c  wasm_stubs.c
src/rust/: Cargo.toml  api.h
src/rust/src/: aio.rs  bytes.rs  codec.rs  common.rs  credentials.rs  error.rs  fs.rs  http_fixture.rs  http_headers.rs  io_iter.rs  lib.rs  metadata.rs  ops.rs  path.rs  r_values.rs
src/rust/src/c_api/: aio.rs  codec.rs  error.rs  fs.rs  mod.rs  ops.rs  store.rs  sync.rs  types.rs
tests/: tinytest.R
tools/: check-c-api-header.R  check-c-api-roundtrip.R  run-minio-test.sh  webr-build.sh
vignettes/: abstract-filesystem.Rmd  async-aio.Rmd  byte-stores-zarr.Rmd  credentials.Rmd  getting-started.Rmd  indexed-range-readers.Rmd  internals.Rmd  native-c-api.Rmd  serializers.Rmd
