[package]
name = "ropendal"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
savvy = { version = "0.10.2", features = ["altrep"] }
opendal = { version = "0.57", default-features = false, features = [
    "blocking",
    "executors-tokio",
    "reqwest-rustls-tls",
    "services-fs",
    "services-http",
    "services-s3",
    "services-gcs",
    "services-azblob",
    "services-gdrive",
    "layers-retry",
    "layers-timeout",
    "layers-concurrent-limit",
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
futures = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
