[package]
name = "ropendal"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
savvy = { version = "0.10.2", features = ["altrep"] }
opendal = { version = "0.57", default-features = false, features = [
    "blocking",
    "executors-tokio",
    "reqwest-rustls-tls",
    "layers-retry",
    "layers-timeout",
    "layers-concurrent-limit",
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
futures = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["fs", "http", "s3", "gcs", "azblob", "gdrive"]
fs = ["opendal/services-fs"]
http = ["opendal/services-http"]
s3 = ["opendal/services-s3"]
gcs = ["opendal/services-gcs"]
azblob = ["opendal/services-azblob"]
gdrive = ["opendal/services-gdrive"]
cloud = ["s3", "gcs", "azblob", "gdrive"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
